--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-epuiv="X-UA-Compatible" content="ie=edge">
     <title>Taskinator</title>
-    <line rel="stylesheet" href="./assets/css/style.css">
+    <line rel="stylesheet" href="./assets/css/style.css" />
 </head>
 <body>
     <header>
         <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task!</p>
-        <button class="btn" >Add Task</button>
+        <button class="btn" id="save-task">Add Task</button>
     </header>
 
     <main class="page-content">
      <section class="task-list-wrapper">
          <h2 class="list-title">Tasks To Do</h2>
-         <ul class ="tasks-list">
+         <ul class ="tasks-list" id="tasks-to-do">
              <li class ="task-item">A task is going to be added soon!</li>
          </ul>
      </section>
 
     </main>
     
-    <script scr=".assets/js/script.js"></script>
+   
 
     <footer> &copy, 2020 by Taskinator
 
     </footer>
+    <script src="./assets/js/game.js"></script>
 </body>
 </html>
